# pitybas

./: .gitignore  AGENTS.md  CHANGELOG.md  GRAPH_SCREEN.md  README.markdown  README.md  TODO.md  pb.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: ti-reference.md
pitybas/: cli.py  expression.py
pitybas/io/: simple.py  vt100.py
src/pitybas/: __main__.py  cli.py  common.py  expression.py  graph.py  interpret.py  parse.py  token_core.py  tokens.py
src/pitybas/io/: __init__.py  base.py  scripted.py  simple.py  vt100.py
tests/: conftest.py  mock_io.py  test_bas_programs.py  test_calculus.py  test_cli.py  test_common.py  test_control_flow.py  test_datetime.py  test_equations.py  test_expressions.py  test_graph.py  test_interpreter_introspection.py  test_io.py  test_io_base.py  test_io_scripted.py  test_io_simple.py  test_io_vt100.py  test_known_bugs.py  test_list_matrix_arithmetic.py  test_matrix_literals.py  test_menu.py  test_negation.py  test_parser.py  test_probability.py  test_statistics.py  test_string_functions.py  test_tokens_module_split.py  test_variables.py
